<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".B_CocokkanDataDiantaraActivity_2">

    <TextView
        android:id="@+id/TV_TextView0_ActivityB2_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/TV_TextView0_ActivityB2_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TV_TextView1_ActivityB2_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/TV_TextView1_ActivityB2_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TV_TextView2_ActivityB2_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="40dp"
        android:text="@string/TV_TextView2_ActivityB2_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/B_Kembali_ActivityB2_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/B_Kembali_ActivityB2_IDXML"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>